--- a/esp-control/esp-pix/platformio.ini
+++ b/esp-control/esp-pix/platformio.ini
@@ -8,6 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
@@ -17,6 +18,13 @@ upload_speed = 921600
 
 lib_deps = 
     bblanchon/ArduinoJson
+    adafruit/Adafruit GFX Library @ ^1.11.5
+    adafruit/Adafruit ST7735 and ST7789 Library @ ^1.10.0
+    olikraus/U8g2_for_Adafruit_GFX @ ^1.8.0
+    ricmoo/QRCode @ ^0.0.1
+    madhephaestus/ESP32Servo@^1.1.2
+
 
 build_flags = 
     -D ARDUINOJSON_USE_LONG_LONG=1
+    
